<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Arms Quartet</string>
    <string name="loading_page">Loading</string>
    <string name="action_settings">Settings</string>
    <string name="start_activity">Start Activity</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    
    <!-- ****************************************************************************** -->
    <!-- 					ACCOUNT ACTIVITY STRINGS -->
    <!-- ****************************************************************************** -->
    <string name="account_activity">Account Activity</string>
    <!-- START STRINGS -->
    <string name="account_start_fragment">Account Start Fragment</string>
    <string name="start_signin">Sign In</string>
    <string name="start_createaccount">Create Account</string>
    
    <!-- SIGNIN STRINGS -->
    <string name="account_signin_fragment">Account Sign In Fragment</string>
        <string name="signin_email">Email</string>
    <string name="signin_password">Password</string>
    <string name="signin_signin">Sign In</string>
    <string name="signin_forgotpassword">
        Forgot your password?
    </string>

    <!-- CREATE ACCOUNT STRINGS -->
    <string name="account_createaccount_fragment">Account Create Account Fragment</string>
    <string name="createaccount_charactername">Character Name</string>
    <string name="createaccount_password">Password</string>
    <string name="createaccount_repeatpassword">Repeat Password</string>
    <string name="createaccount_email">Email</string>
    <string name="createaccount_createaccount">Create Account</string>
    
    <!-- ****************************************************************************** -->
    <!--                          MENU ACTIVITY STRINGS -->
    <!-- ****************************************************************************** -->
    <string name="menu_activity">Menu Activity</string>
    <string name="ad_banner">Ad Banner Here</string>
    
    <!-- TABS -->
    <string name="menu_tab_character">Character</string>
    <string name="menu_tab_battles">Battles</string>
    <string name="menu_tab_friends">Friends</string>  
    
   <!--  BATTLES MENU -->
   <string name="menu_battles_fragment">Menu Battles Fragment</string>
   <string name="menu_battles_ongoing_battles">Ongoing Battles</string>
   <string name="menu_battles_start_battle">+ Start a Battle</string>
   
   <!-- CHARACTER MENU -->
   <string name="portrait">Portrait</string>
   
   <!-- ADD BATTLE DIALOG -->
   <string name="add_battle_description">Opponent\'s character name&#8230;</string>
   <string name="add_battle_button">Begin Battle</string>
   
   <!-- ADD FRIEND DIALOG -->
   <string name="add_friend_description">Friend\'s character name&#8230;</string>
   <string name="add_friend_button">Add Friend</string>
    
</resources>
