<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical" >
	
    <!-- TOP HALF -->
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        
        <EditText
            android:id="@+id/createaccount_edittext_charactername"
            style="@style/account_edittext"
            android:hint="@string/createaccount_charactername"
            android:inputType="text"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp" />
        
        <EditText 
            android:id="@+id/createaccount_edittext_password"
			style="@style/account_edittext"
            android:hint="@string/createaccount_password"
            android:inputType="textPassword"
            android:layout_below="@id/createaccount_edittext_charactername"
            android:layout_marginTop="10dp" />
        
        <EditText
            android:id="@+id/createaccount_edittext_repeatpassword"
            style="@style/account_edittext"
            android:hint="@string/createaccount_repeatpassword"
            android:inputType="textPassword"
            android:layout_below="@id/createaccount_edittext_password"
            android:layout_marginTop="10dp" />
        
        <EditText
            android:id="@+id/createaccount_edittext_email"
			style="@style/account_edittext"
            android:hint="@string/createaccount_email"
            android:inputType="textEmailAddress"
            android:layout_below="@id/createaccount_edittext_repeatpassword"
            android:layout_marginTop="10dp"
            android:maxLength="256" />
        
        <Button
            android:id="@+id/createaccount_button_createaccount"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/createaccount_createaccount"
            android:textSize="20sp"
            android:textColor="@color/lighterGray"
            android:layout_below="@id/createaccount_edittext_email"
            android:background="@drawable/button_colors"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp" />

    </RelativeLayout>
    
    <!--  BOTTOM HALF -->
    <!-- THIS SHOULD BE REPLACED MY A PROPER LOGO IMAGE -->
    <TextView
	    android:id="@+id/signin_text_app_name"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:text="@string/app_name"
	    android:textSize="50sp"
	    android:textColor="@color/white"
	    android:gravity="center"
    	android:layout_weight="2" /> 
</LinearLayout>