<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical" >
	
    <!-- TOP HALF -->
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" >
        
        <Button
            android:id="@+id/start_button_signin"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/start_signin"
            android:textSize="20sp"
            android:textColor="@color/lighterGray"
            android:layout_alignParentTop="true"
            android:background="@drawable/button_colors"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp" />

        
        <Button
            android:id="@+id/start_button_createaccount"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/start_createaccount"
            android:textSize="20sp"
            android:textColor="@color/lighterGray"
            android:layout_below="@id/start_button_signin"
            android:background="@drawable/button_colors"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp" /> 
        
    </RelativeLayout>
    
    <!--  BOTTOM HALF -->
    <!-- THIS SHOULD BE REPLACED MY A PROPER LOGO IMAGE -->
    <TextView
	    android:id="@+id/login_text_app_name"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:text="@string/app_name"
	    android:textSize="50sp"
	    android:textColor="@color/white"
	    android:gravity="center"
    	android:layout_weight="2" /> 
    
    
    
</LinearLayout>